<resources>

    <string name="banner_ad_unit_id">ca-app-pub-3120800894638034/7105898088</string>

    <string name="app_name">Я не Пью!</string>
    <string name="email">Email</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="confirmPassword">Повторите пароль</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="logIn">Или войдите</string>
    <string name="youArntDrink">Вы не пьете:</string>
    <string name="todrink">Сбросить</string>
    <string name="writeReviews">Оставить отзыв</string>
    <string name="newName">Новое имя</string>
    <string name="setTime">Установить время</string>
    <string name="about">About</string>
    <string name="settings">Настройки</string>
    <string name="aboutProgram">О программе</string>
    <string name="sign_out">Выход</string>
    <string name="app_full_name">Приложение-счетчик дней без алкоголя</string>
    <string name="author">Автор:</string>
    <string name="author_name">M.V.Likhachev</string>
    <string name="version">Версия:</string>
    <string name="version_text">1.0.0</string>
    <string name="profile">Профиль</string>
    <string name="main">Главная</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Друзья</string>
    <string name="aboutMe">Обо мне</string>
    <string name="save">Сохранить</string>
    <string name="drinkDate">Дата употребления алкоголя(dd/MM/yyyy)</string>
</resources>