<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".screens.Room.SettingsScreen.SettingsFragment">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/roomNameTextInput"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/roomAboutMeTextInput"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:hint="@string/aboutMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <EditText
        android:id="@+id/roomDrinkDateTextInput"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:hint="@string/drinkDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/roomSaveDataButton"
        android:text="@string/save"
        android:layout_marginTop="10dp"
        style="@style/ButtonStyle"
        />

</LinearLayout>